<resources>
    <string name="app_name">WanAndroid</string>

    <string name="app_nav_home">首页</string>
    <string name="app_nav_project">项目</string>
    <string name="app_nav_mine">我的</string>

    <string name="app_answer">问答</string>
    <string name="app_article_list">文章列表</string>
    <string name="app_input_username_hint">请输入用户名</string>
    <string name="app_input_password_hint">请输入密码</string>
    <string name="app_input_password_again_hint">请再次输入密码</string>
    <string name="app_login">登录</string>
    <string name="app_register">注册</string>
    <string name="app_login_others">------------ 第三方登录 ------------</string>

    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
