<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="model"
            type="com.wdl.wanandroid.viewmodel.LoginViewModel" />

        <variable
            name="holder"
            type="com.wdl.wanandroid.ui.login.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <com.wdl.wanandroid.widget.TitleBar
            android:id="@+id/tb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="5dp"
            android:ellipsize="middle"
            android:hint="@string/app_input_username_hint"
            android:inputType="text"
            android:singleLine="true"
            android:text="@={model.MUserName,default=``}"
            app:layout_constraintTop_toBottomOf="@id/iv" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:ellipsize="middle"
            android:hint="@string/app_input_password_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:text="@={model.MPwd,default=``}"
            android:textSize="17dp"
            app:layout_constraintTop_toBottomOf="@id/et_name" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/btn_bg"
            android:enabled="@{!(TextUtils.isEmpty(model.MUserName) || TextUtils.isEmpty(model.MPwd))}"
            android:onClick="@{holder::login}"
            android:text="@string/app_login"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/et_pwd" />

        <com.wdl.module_base.widget.WTextView
            android:id="@+id/wtv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            tools:text="忘记密码?" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/app_login_others"
            app:layout_constraintBottom_toTopOf="@id/iv_wechat" />

        <ImageView
            android:id="@+id/iv_wechat"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="31dp"
            android:layout_marginBottom="@dimen/dp_40"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_wechat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>